<?xml version="1.0" encoding="utf-8"?><!--
  ~     Notes  Copyright (C) 2018  Nikhil Soni
  ~     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
  ~     This is free software, and you are welcome to redistribute it
  ~     under certain conditions; type `show c' for details.
  ~
  ~ The hypothetical commands `show w' and `show c' should show the appropriate
  ~ parts of the General Public License.  Of course, your program's commands
  ~ might be different; for a GUI interface, you would use an "about box".
  ~
  ~   You should also get your employer (if you work as a programmer) or school,
  ~ if any, to sign a "copyright disclaimer" for the program, if necessary.
  ~ For more information on this, and how to apply and follow the GNU GPL, see
  ~ <http://www.gnu.org/licenses/>.
  ~
  ~   The GNU General Public License does not permit incorporating your program
  ~ into proprietary programs.  If your program is a subroutine library, you
  ~ may consider it more useful to permit linking proprietary applications with
  ~ the library.  If this is what you want to do, use the GNU Lesser General
  ~ Public License instead of this License.  But first, please read
  ~ <http://www.gnu.org/philosophy/why-not-lgpl.html>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/horizontal"
    android:clipToPadding="false"
    android:padding="@dimen/eight"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fabAddNoteContainer"
        style="@style/wrapContent"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            style="@style/revealFabText"
            android:text="@string/createFolder"
            android:background="@drawable/rounded_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabAddFolder"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddFolder"
            style="@style/wrapContent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/eight"
            android:src="@drawable/ic_create_new_folder_48px"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fabAddFolderContainer"
        style="@style/wrapContent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fabAddNoteContainer">

        <TextView
            style="@style/revealFabText"
            android:text="@string/createNote"
            android:background="@drawable/rounded_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fabAddNote"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddNote"
            style="@style/wrapContent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/eight"
            android:src="@drawable/ic_note_add_48px"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdd"
        style="@style/wrapContent"
        android:layout_margin="@dimen/eight"
        android:src="@drawable/ic_add_black_48px"
        android:clipChildren="false"
        app:fabSize="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fabAddFolderContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>