...

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/horizontal">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dialogFolderName"
        style="@style/wrapContent"
        android:autofillHints=""
        android:background="@null"
        android:fontFamily="@font/arvenirltstd_book"
        android:hint="@string/newfoldername"
        android:inputType="text"
...
        android:layout_marginEnd="@dimen/sixteen"
        android:background="@drawable/circle"
        android:backgroundTint="@color/colorAccent"
        android:clickable="true"
        android:contentDescription="@string/imageDescription"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/dialogFolderCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialogFolderName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dialogFolderCreate"
...
