...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/listContainer"
    style="@style/matchParent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commonList"
        style="@style/matchParent"
        android:clipToPadding="false"
        android:paddingBottom="88dp" />

    <ImageView
        android:id="@+id/listBackground"
...
