<?xml version="1.0" encoding="utf-8"?><!--
  ~     Notes  Copyright (C) 2018  Nikhil Soni
  ~     This program comes with ABSOLUTELY NO WARRANTY; for details type `show w'.
  ~     This is free software, and you are welcome to redistribute it
  ~     under certain conditions; type `show c' for details.
  ~
  ~ The hypothetical commands `show w' and `show c' should show the appropriate
  ~ parts of the General Public License.  Of course, your program's commands
  ~ might be different; for a GUI interface, you would use an "about box".
  ~
  ~   You should also get your employer (if you work as a programmer) or school,
  ~ if any, to sign a "copyright disclaimer" for the program, if necessary.
  ~ For more information on this, and how to apply and follow the GNU GPL, see
  ~ <http://www.gnu.org/licenses/>.
  ~
  ~   The GNU General Public License does not permit incorporating your program
  ~ into proprietary programs.  If your program is a subroutine library, you
  ~ may consider it more useful to permit linking proprietary applications with
  ~ the library.  If this is what you want to do, use the GNU Lesser General
  ~ Public License instead of this License.  But first, please read
  ~ <http://www.gnu.org/philosophy/why-not-lgpl.html>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolsBottomSheet"
    style="@style/horizontal"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:duplicateParentState="true"
    android:elevation="16dp"
    android:focusable="true"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="48dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/toolsDate"
        style="@style/bottomToolText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?selectableItemBackground"
        android:drawableEnd="@drawable/ic_add_box_24px"
        android:text="@string/noteToolsDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/toolsCheckList"
        style="@style/bottomToolText"
        android:drawableTop="@drawable/ic_list_24px"
        android:text="@string/noteToolCheckList"
        app:layout_constraintEnd_toStartOf="@id/toolsCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolsDate" />

    <TextView
        android:id="@+id/toolsCamera"
        style="@style/bottomToolText"
        android:drawableTop="@drawable/ic_camera_alt_24px"
        android:text="@string/noteToolCamera"
        app:layout_constraintEnd_toStartOf="@id/toolsAttachment"
        app:layout_constraintStart_toEndOf="@id/toolsCheckList"
        app:layout_constraintTop_toBottomOf="@id/toolsDate" />

    <TextView
        android:id="@+id/toolsAttachment"
        style="@style/bottomToolText"
        android:drawableTop="@drawable/ic_attach_file_24px"
        android:text="@string/noteToolAttachment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/toolsCamera"
        app:layout_constraintTop_toBottomOf="@id/toolsDate" />

    <TextView
        android:id="@+id/toolsReminder"
        style="@style/bottomToolText"
        android:drawableTop="@drawable/ic_alarm_add_24px"
        android:text="@string/noteToolReminder"
        app:layout_constraintEnd_toEndOf="@id/toolsCheckList"
        app:layout_constraintStart_toStartOf="@id/toolsCheckList"
        app:layout_constraintTop_toBottomOf="@id/toolsCheckList" />

    <TextView
        android:id="@+id/toolsAudio"
        style="@style/bottomToolText"
        android:drawableTop="@drawable/ic_music_note_24px"
        android:text="@string/noteToolAudio"
        app:layout_constraintEnd_toEndOf="@id/toolsCamera"
        app:layout_constraintStart_toStartOf="@id/toolsCamera"
        app:layout_constraintTop_toBottomOf="@id/toolsCheckList" />

    <TextView
        android:id="@+id/toolsColor"
        style="@style/bottomToolText"
        android:drawableTop="@drawable/ic_color_lens_24px"
        android:text="@string/noteToolColor"
        app:layout_constraintEnd_toEndOf="@id/toolsAttachment"
        app:layout_constraintStart_toStartOf="@id/toolsAttachment"
        app:layout_constraintTop_toBottomOf="@id/toolsCheckList" />

</androidx.constraintlayout.widget.ConstraintLayout>

