...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/horizontal"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkListTicker"
        style="@style/wrapContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/checkListItem"
        style="@style/wrapContent"
        android:layout_gravity="center_vertical"
        android:autofillHints=""
        android:background="@null"
        android:fontFamily="@font/arvenirltstd_medium"
        android:hint="@string/checkListAddItem"
...
